# Inventory-Management-System

./: README.md  pyproject.toml
.github/workflows/: ci.yml
development/: hooks.py  tasks.py
development/development/dashboard_chart/items_below_reorder_level/: items_below_reorder_level.json
development/development/development_dashboard/inventory_management_system/: inventory_management_system.json
development/development/doctype/category/: category.js  category.json  category.py  test_category.py
development/development/doctype/destination/: destination.js  destination.json  destination.py  test_destination.py
development/development/doctype/item_details/: item_details.json  item_details.py
development/development/doctype/items/: items.js  items.json  items.py  test_items.py
development/development/doctype/items_list/: items_list.json  items_list.py
development/development/doctype/reorder_notifications/: reorder_notifications.js  reorder_notifications.json  reorder_notifications.py  test_reorder_notifications.py
development/development/doctype/source/: source.js  source.json  source.py  test_source.py
development/development/doctype/stock_entries/: stock_entries.js  stock_entries.json  stock_entries.py  test_stock_entries.py
development/development/doctype/stock_ledger/: stock_ledger.js  stock_ledger.json  stock_ledger.py  test_stock_ledger.py
development/development/doctype/suppliers/: suppliers.js  suppliers.json  suppliers.py  test_suppliers.py
development/development/notification/items_below_reorder_level/: items_below_reorder_level.html  (+1 more)
(+11 files in other folders)
